--- a/index.html
+++ b/index.html
@@ -2,24 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>lesson-08</title>
 </head>
 <body>
     <!-- Head -->
     <header>
-        <div>
-            <span class="ht">TRAINING <span class="ot">STUDIO</span></span>
+        <span class="ht">TRAINING <span class="ot">STUDIO</span></span>
 
-            <span class="sButton">
-                <a href="">HOME   </a>
-                <a href="">ABOUT   </a>
-                <a href="">CLASSES   </a>
-                <a href="">SCHEDULES   </a>
-                <a href="">CONTACT   </a>
-                <button>SIGN UP</button>
-            </span>
-        </div>
+        <span class="sButton">
+            <a href="">HOME  </a>
+            <a href="">ABOUT  </a>
+            <a href="">CLASSES  </a>
+            <a href="">SCHEDULES  </a>
+            <a href="">CONTACT  </a>
+            <button>SIGN UP</button>
+        </span>
     </header>
+
+    <!-- Content -->
+    <section>
+        <div class="st">WORK HARDER, GET STRONGER</div>
+        <br>
+
+        <div class="mt">EASY WITH OUR <span class="ot">GYM</span></div>
+        <br>
+
+        <button>BECOME A MEMBER</button>
+    </section>
 </body>
 </html>
